[gd_scene load_steps=6 format=3 uid="uid://dl60sghuj8ytx"]

[ext_resource type="Script" path="res://Scripts/UI Panel/WorldSelection.gd" id="1_4auuk"]
[ext_resource type="PackedScene" uid="uid://2bvlgwxs5ohd" path="res://Scenes/Objects/world_selection_element.tscn" id="2_rheim"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3enr"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_rpbgs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bfek2"]

[node name="WorldSelection" type="Panel" node_paths=PackedStringArray("WorldVBoxContainer")]
offset_right = 800.0
offset_bottom = 450.0
theme_override_styles/panel = SubResource("StyleBoxFlat_k3enr")
script = ExtResource("1_4auuk")
WorldSelectionElement = ExtResource("2_rheim")
WorldVBoxContainer = NodePath("WorldScrollContainer/WorldVBoxContainer")

[node name="WorldScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_top = 50.0
offset_right = 800.0
offset_bottom = 450.0
theme = SubResource("Theme_rpbgs")
theme_override_styles/panel = SubResource("StyleBoxEmpty_bfek2")
horizontal_scroll_mode = 3

[node name="WorldVBoxContainer" type="VBoxContainer" parent="WorldScrollContainer"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
theme_override_constants/separation = 5

[node name="CreateNew" type="Button" parent="."]
layout_mode = 0
offset_left = 388.0
offset_top = 9.0
offset_right = 583.0
offset_bottom = 49.0
text = "Create New World"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 9.0
offset_right = 77.0
offset_bottom = 49.0
text = "Back"

[node name="JoinNew" type="Button" parent="."]
layout_mode = 0
offset_left = 591.0
offset_top = 9.0
offset_right = 786.0
offset_bottom = 49.0
text = "Join World"

[connection signal="button_down" from="CreateNew" to="." method="_on_create_new_button_down"]
[connection signal="button_down" from="Back" to="." method="_on_back_button_down"]
